--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <header>
     <h1>Custom Veneers in Los Angeles</h1>
     <p>Finally get the smile you've always wanted, with a hand crafted smile artfully made to brighten and lift your face!</p>
-    <img src="https://jcellars.github.io/veneers/veneers-banner.jpg" alt="Custom Veneers Banner" style="width:100%; height:auto; margin-bottom: 20px;" />
+    <img src="veneers-banner.jpg" alt="Custom Veneers Banner" style="width:100%; height:auto; margin-bottom: 20px;" />
     <h2>Is it time for the smile of your dreams?</h2>
     <button onclick="window.location.href='mailto:info@yourdomain.com'">Request A Consult</button><br>
     <a href="#">Virtual Consult</a>
