--- a/index.html
+++ b/index.html
@@ -4,28 +4,121 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Custom Veneers in Los Angeles | Studio Smiles</title>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #fff; color: #333; }
-    header { background-color: #f5f5f5; padding: 40px 20px; text-align: center; }
-    header h1 { font-size: 2.5em; margin-bottom: 10px; }
-    header p { font-size: 1.2em; margin-bottom: 20px; }
-    .image-placeholder { width: 100%; height: 300px; background-color: #ddd; margin-bottom: 20px; }
-    .container { max-width: 800px; margin: 40px auto; padding: 0 20px; }
-    .section { margin-bottom: 40px; }
-    h2 { font-size: 1.8em; margin-bottom: 10px; }
-    ul { padding-left: 20px; }
-    .cta { background-color: #f0f0f0; padding: 30px; text-align: center; }
-    .cta button, .cta a { margin: 10px; padding: 12px 20px; font-size: 1em; text-decoration: none; border: none; background-color: #333; color: #fff; cursor: pointer; border-radius: 5px; }
-    .cta a { display: inline-block; }
-    footer { background-color: #f5f5f5; padding: 20px; text-align: center; font-size: 0.9em; }
-    .review { font-style: italic; margin-top: 10px; }
+    body {
+      font-family: 'Open Sans', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #141414;
+      color: #f5f5f5;
+    }
+    header {
+      background-color: #141414;
+      padding: 60px 20px 30px;
+      text-align: center;
+    }
+    header h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 2.8em;
+      margin-bottom: 10px;
+      color: #f5f5f5;
+    }
+    header p {
+      font-size: 1.2em;
+      color: #f5f5f5;
+      max-width: 700px;
+      margin: 0 auto 30px;
+    }
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 40px 20px;
+    }
+    .section {
+      margin-bottom: 50px;
+      background-color: #1f1f1f;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+    }
+    h2 {
+      font-family: 'Playfair Display', serif;
+      font-size: 1.8em;
+      margin-bottom: 15px;
+      color: #b4a774;
+    }
+    p, ul {
+      font-size: 1.05em;
+      line-height: 1.6;
+      color: #f5f5f5;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    .cta {
+      background-color: #1f1f1f;
+      padding: 40px;
+      text-align: center;
+      border-top: 1px solid #333;
+    }
+    .cta button, .cta a {
+      margin: 10px;
+      padding: 14px 28px;
+      font-size: 1em;
+      text-decoration: none;
+      border: none;
+      background-color: #b4a774;
+      color: #141414;
+      cursor: pointer;
+      border-radius: 30px;
+      transition: all 0.3s ease;
+    }
+    .cta a {
+      display: inline-block;
+    }
+    .cta button:hover, .cta a:hover {
+      background-color: #a39763;
+    }
+    footer {
+      background-color: #141414;
+      padding: 20px;
+      text-align: center;
+      font-size: 0.9em;
+      color: #aaa;
+    }
+    .review {
+      font-style: italic;
+      margin-top: 10px;
+      color: #ccc;
+    }
+    img {
+      width: 100%;
+      height: auto;
+      display: block;
+      margin: 0 auto 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+    }
+    @media screen and (max-width: 768px) {
+      header h1 {
+        font-size: 2em;
+      }
+      header p {
+        font-size: 1em;
+      }
+      .cta button, .cta a {
+        width: 100%;
+        margin-top: 10px;
+      }
+    }
   </style>
 </head>
 <body>
   <header>
     <h1>Custom Veneers in Los Angeles</h1>
     <p>Finally get the smile you've always wanted, with a hand crafted smile artfully made to brighten and lift your face!</p>
-    <img src="veneers-banner.jpg" alt="Custom Veneers Banner" style="width:100%; height:auto; margin-bottom: 20px;" />
+    <img src="veneers-banner.jpg" alt="Custom Veneers Banner" />
     <h2>Is it time for the smile of your dreams?</h2>
     <button onclick="window.location.href='mailto:info@yourdomain.com'">Request A Consult</button><br>
     <a href="#">Virtual Consult</a>
@@ -51,19 +144,17 @@
       <h2>What to Expect</h2>
       <p>Every smile is different, it depends on where the patient starts and where they want to go, so every treatment is tailored to the individual's goals and budget. At the consult, whether virtual or in person, there is no pain and no commitment needed. We will show you your options, show you what you will look like with your new smile, and walk you through your tailored process to achieve the smile of your dreams and get your confidence back!</p>
     </div>
+    <div class="section">
+      <h2>Trusted by Thousands</h2>
+      <p>Studio Smiles is led by Dr. Andrew Higgins and Dr. Jason Cellars, two of LA’s top-rated cosmetic dentists, known for their minimally invasive and highly artistic approach to smile design.</p>
+      <div class="review">"I never imagined my smile could look this good. The team made me feel like a VIP every step of the way." – Lauren C., Los Angeles</div>
+    </div>
   </div>
   <div class="cta">
     <h2>Ready for Your New Smile?</h2>
     <button onclick="window.location.href='mailto:info@yourdomain.com'">Request a Call Back</button>
     <a href="https://jasoncellarsdds.com/veneers" target="_blank">Learn More</a>
     <a href="https://your-scheduling-portal.com" target="_blank">Schedule Online</a>
-  </div>
-  <div class="container">
-    <div class="section">
-      <h2>Trusted by Thousands</h2>
-      <p>Studio Smiles is led by Dr. Andrew Higgins and Dr. Jason Cellars, two of LA’s top-rated cosmetic dentists, known for their minimally invasive and highly artistic approach to smile design.</p>
-      <div class="review">"I never imagined my smile could look this good. The team made me feel like a VIP every step of the way." – Lauren C., Los Angeles</div>
-    </div>
   </div>
   <footer>
     <p>&copy; 2025 Studio Smiles | Located in Mid-City Los Angeles | Call us at (XXX) XXX-XXXX</p>
