--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
   <header>
     <h1>Custom Veneers in Los Angeles</h1>
     <p>Finally get the smile you've always wanted, with a hand crafted smile artfully made to brighten and lift your face!</p>
+    <div class="header-buttons">
+      <button class="main-btn" onclick="window.location.href='mailto:info@yourdomain.com'">Request A Consult</button>
+    </div>
     <img src="veneers-banner.jpg" alt="Custom Veneers Banner" />
     <h2>Is it time for the smile of your dreams?</h2>
     <div class="header-buttons">
@@ -175,6 +178,7 @@
         <li>Patient centered approach ensuring comfort and transparency</li>
         <li>Digital or physical mock-ups so you can try your smile before committing to anything</li>
       </ul>
+      <img src="media-feature.jpg" alt="As Seen In the Media">
     </div>
     <div class="section">
       <h2>What to Expect</h2>
@@ -193,7 +197,7 @@
     <a href="https://your-scheduling-portal.com" target="_blank">Schedule Online</a>
   </div>
   <footer>
-    <p>&copy; 2025 Studio Smiles | Located in Mid-City Los Angeles | Call us at (XXX) XXX-XXXX</p>
+    <p>&copy; 2025 Studio Smiles | Located in Mid-City Los Angeles | Call us at (323) 634-9333</p>
   </footer>
 </body>
 </html>
