--- a/index.html
+++ b/index.html
@@ -93,6 +93,15 @@
       margin-top: 1.5rem;
       cursor: pointer;
     }
+    .success-message {
+      margin-top: 1rem;
+      padding: 1rem;
+      background-color: #2a2a2a;
+      color: #b4a774;
+      border-radius: 0.5rem;
+      display: none;
+      text-align: center;
+    }
     footer {
       text-align: center;
       padding: 2rem 1rem;
@@ -138,7 +147,7 @@
   </section>
 
   <section>
-    <form id="consult-form" action="https://formspree.io/f/mzzvbgrd" method="POST">
+    <form id="consult-form">
       <h2>Request a Free Consult</h2>
 
       <label for="name">Name</label>
@@ -153,16 +162,36 @@
       <label for="message">How can we help you?</label>
       <textarea id="message" name="message" rows="4"></textarea>
 
-      <!-- Formspree handling -->
-      <input type="hidden" name="_subject" value="New Veneers Landing Page Lead!">
-      <input type="hidden" name="_redirect" value="https://jcellars.github.io/veneers/thank-you.html">
-
       <button type="submit">Submit Request</button>
+      <div class="success-message" id="success-message">Thank you! We’ll reach out to you shortly.</div>
     </form>
   </section>
 
   <footer>
     Studio Smiles | (323) 634-9333
   </footer>
+
+  <script>
+    const form = document.getElementById('consult-form');
+    form.addEventListener('submit', async function (e) {
+      e.preventDefault();
+
+      const formData = new FormData(form);
+      const response = await fetch('https://formspree.io/f/mzzvbgrd', {
+        method: 'POST',
+        headers: {
+          'Accept': 'application/json'
+        },
+        body: formData
+      });
+
+      if (response.ok) {
+        document.getElementById('success-message').style.display = 'block';
+        form.reset();
+      } else {
+        alert('Something went wrong. Please try again.');
+      }
+    });
+  </script>
 </body>
 </html>
