--- a/index.html
+++ b/index.html
@@ -148,23 +148,25 @@
 
   <section>
     <form id="consult-form">
-      <h2>Request a Free Consult</h2>
+  <h2>Request a Free Consult</h2>
 
-      <label for="name">Name</label>
-      <input type="text" id="name" name="name" required>
+  <input type="hidden" name="_subject" value="New Veneers Consult Request">
 
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" required>
+  <label for="name">Name</label>
+  <input type="text" id="name" name="name" required>
 
-      <label for="phone">Phone Number</label>
-      <input type="tel" id="phone" name="phone">
+  <label for="email">Email</label>
+  <input type="email" id="email" name="email" required>
 
-      <label for="message">How can we help you?</label>
-      <textarea id="message" name="message" rows="4"></textarea>
+  <label for="phone">Phone Number</label>
+  <input type="tel" id="phone" name="phone">
 
-      <button type="submit">Submit Request</button>
-      <div class="success-message" id="success-message">Thank you! We’ll reach out to you shortly.</div>
-    </form>
+  <label for="message">How can we help you?</label>
+  <textarea id="message" name="message" rows="4"></textarea>
+
+  <button type="submit">Submit Request</button>
+  <div class="success-message" id="success-message">Thank you! We’ll reach out to you shortly.</div>
+</form>
   </section>
 
   <footer>
